syntax = "proto3";

package supportDescGrpc;

option go_package = "supportDesc.supportDescGrpc;supportDescGrpc";

service SupportDescGrpc{
	rpc Login (LoginRequest) returns (LoginResponse);
	rpc GetRequests (EmptyRequest) returns (Requests);
	rpc GetWorkDayAddresses (EmptyRequest) returns (WorkDayAddresses);
}

message EmptyRequest {}

message LoginRequest{
	string login = 1;
	string password = 2;
}

message LoginResponse{
	string access = 1;
	string refresh = 2;	
}

message Object{
	int32 id = 1;
	string name = 2;
	string address = 3;
	repeated float coords = 4;
}

message Request{
	int32 id = 1;
	int32 currency = 2;
	Object object = 3;
}

message Requests{
	repeated Request data = 1;
}

message GetWorkDayAddressesRequest{
	uint32 user_id = 1;
	bool show_hidden = 2;
}

message WorkDayAddress{
	uint32 id = 1;
	string name = 2;
	string coords = 3;
	bool is_active = 4;
}
message WorkDayAddresses{
	repeated WorkDayAddress addresses = 1;
}